Initial 1.21 port TODO: Reconsider the current (dogshit) implementation for the ME Source Jar